WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129400
Give VisitedLinkProviders an identifier and send them to the web process
https://bugs.webkit.org/show_bug.cgi?id=129400
Summary
Give VisitedLinkProviders an identifier and send them to the web process
Anders Carlsson
Reported
2014-02-26 15:24:55 PST
Give VisitedLinkProviders an identifier and send them to the web process
Attachments
Patch
(9.32 KB, patch)
2014-02-26 15:26 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-02-26 15:26:18 PST
Created
attachment 225308
[details]
Patch
WebKit Commit Bot
Comment 2
2014-02-26 15:28:44 PST
Attachment 225308
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKVisitedLinkProviderInternal.h:36: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2014-02-26 15:32:26 PST
Comment on
attachment 225308
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=225308&action=review
> Source/WebKit2/UIProcess/API/Cocoa/WKVisitedLinkProviderInternal.h:37 > + RefPtr<WebKit::VisitedLinkProvider> _visitedLinkProvider;
Please keep this ivar in the implementation file until there’s a reason to expose it (and then use @package).
> Source/WebKit2/UIProcess/VisitedLinkProvider.cpp:44 > + static uint64_t identifier; > + > + return ++identifier;
Since clients can call -[WKVisitedLinkProvider init] from any thread, this needs to be made thread-safe.
Anders Carlsson
Comment 4
2014-02-26 15:43:00 PST
Committed
r164756
: <
http://trac.webkit.org/changeset/164756
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug