Give VisitedLinkProviders an identifier and send them to the web process https://bugs.webkit.org/show_bug.cgi?id=129400

Reviewed by Dan Bernstein.

* Shared/WebPageCreationParameters.cpp:
(WebKit::WebPageCreationParameters::encode):
(WebKit::WebPageCreationParameters::decode):
* Shared/WebPageCreationParameters.h:
* UIProcess/API/Cocoa/WKVisitedLinkProviderInternal.h:
* UIProcess/VisitedLinkProvider.cpp:
(WebKit::generateIdentifier):
(WebKit::VisitedLinkProvider::VisitedLinkProvider):
* UIProcess/VisitedLinkProvider.h:
(WebKit::VisitedLinkProvider::identifier):
* UIProcess/WebContext.cpp:
(WebKit::WebContext::createWebPage):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::WebPageProxy):
(WebKit::WebPageProxy::internalShowContextMenu):
* UIProcess/WebPageProxy.h:

Canonical link: https://commits.webkit.org/147450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164756 268f45cc-cd09-0410-ab3c-d52691b4dbfc